--- a/src/app/instance/instance.component.html
+++ b/src/app/instance/instance.component.html
@@ -1,5 +1,5 @@
-<div class="jumbotron">
-    <h3>EC2 Instances</h3>
+<div class="instance-section">
+    <h5>EC2 INSTANCES</h5>
     <div class="button-bar">
         <button type="button" class="btn btn-outline-success" id="create-EC2" data-toggle="modal" data-target="#createModal"><i class="fas fa-plus fa-lg"></i></button>
         <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminate('ec2')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
@@ -7,7 +7,7 @@
         <button type="button" class="btn btn-outline-primary" id="analyze-EC2" (click)="analyze('ec2')"><i class="far fa-chart-bar fa-lg"></i></button>
         <button type="button" class="btn btn-outline-primary" id="cost-EC2"><i class="fas fa-dollar-sign fa-lg"></i></button>
     </div>
-    <table id="EC2-table" class="table">
+    <table id="EC2Table" class="table">
         <thead>
             <tr>
                 <th scope="col">ID</th>
@@ -19,24 +19,22 @@
                 <th scope="col">Creation Date</th>
             </tr>
         </thead>
-        <ng-container *ngFor="let datum of ec2_data">
-            <tbody *ngFor="let instance of datum.Instances">
-                <tr class="clickable-row" (click)="activateRow('EC2-table', instance.InstanceId)">
-                    <th scope="row" id="instanceId">{{ instance.InstanceId }}</th>
-                    <td>{{ instance.Tags[0]?.Value }}</td>
-                    <td>{{ instance.InstanceType }}</td>
-                    <td>{{ instance.Placement.AvailabilityZone }}</td>
-                    <td>{{ instance.State.Name }}</td>
-                    <td>{{ instance.PublicDnsName }}</td>
-                    <td>{{ instance.LaunchTime }}</td>
-                </tr>
-            </tbody>
-        </ng-container>
+        <tbody *ngFor="let instance of data">
+            <tr class="clickable-row" (click)="activateRow('EC2Table', instance.InstanceId)">
+                <th scope="row" id="instanceId">{{ instance.InstanceId }}</th>
+                <td>{{ instance.Tags[0]?.Value }}</td>
+                <td>{{ instance.InstanceType }}</td>
+                <td>{{ instance.Placement.AvailabilityZone }}</td>
+                <td>{{ instance.State.Name }}</td>
+                <td>{{ instance.PublicDnsName }}</td>
+                <td>{{ instance.LaunchTime }}</td>
+            </tr>
+        </tbody>
     </table>
 </div>
 
-<div class="jumbotron">
-    <h3>RDS DB Instances</h3>
+<div class="instance-section">
+    <h5>RDS DB INSTANCES</h5>
     <div class="button-bar">
         <button type="button" class="btn btn-outline-success" id="create-RDS" (click)="create('rds')"><i class="fas fa-plus fa-lg"></i></button>
         <button type="button" class="btn btn-outline-danger" id="terminate-AWS-RDS" (click)="terminate('rds')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
@@ -44,7 +42,7 @@
         <button type="button" class="btn btn-outline-primary" id="analyze-RDS" (click)="analyze('rds')"><i class="far fa-chart-bar fa-lg"></i></button>
         <button type="button" class="btn btn-outline-primary" id="cost-RDS"><i class="fas fa-dollar-sign fa-lg"></i></button>
     </div>
-    <table id="RDS-table" class="table">
+    <table id="RDSTable" class="table">
         <thead>
             <tr>
                 <th scope="col">Name</th>
@@ -58,7 +56,7 @@
             </tr>
         </thead>
         <tbody *ngFor="let instance of rds_data">
-            <tr class="clickable-row" (click)="activateRow('RDS-table', instance.DBInstanceIdentifier)">
+            <tr class="clickable-row" (click)="activateRow('RDSTable', instance.DBInstanceIdentifier)">
                 <th>{{ instance.DBName }}</th>
                 <th scope="row" id="instanceId">{{ instance.DBInstanceIdentifier }}</th>
                 <!--<td>{{ instance.Tags[0]?.Value }}</td>-->
@@ -71,6 +69,37 @@
         </tbody>
     </table>
 </div>
+
+<div class="instance-section">
+        <h5>EFS INSTANCES</h5>
+        <div class="button-bar">
+            <button type="button" class="btn btn-outline-success" id="create-EFS" (click)="create('efs')"><i class="fas fa-plus fa-lg"></i></button>
+            <button type="button" class="btn btn-outline-danger" id="terminate-AWS-EFS" (click)="terminate('efs')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
+            <button type="button" class="btn btn-outline-danger" id="terminate-jenkins-EFS"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-jenkins fa-lg"></i></button>
+            <button type="button" class="btn btn-outline-primary" id="analyze-EFS" (click)="analyze('efs')"><i class="far fa-chart-bar fa-lg"></i></button>
+            <button type="button" class="btn btn-outline-primary" id="cost-EFS"><i class="fas fa-dollar-sign fa-lg"></i></button>
+        </div>
+        <table id="EFSTable" class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Identifier</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Size</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Creation Date</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let instance of efs_data">
+                <tr class="clickable-row" (click)="activateRow('EFSTable', instance.FileSystemId)">
+                    <th scope="row" id="instanceId">{{ instance.FileSystemId }}</th>
+                    <td>{{ instance.name }}</td>
+                    <td>{{ instance.SizeInBytes.Value }}</td>
+                    <td>{{ instance.LifeCycleState }}</td>
+                    <td>{{ instance.CreationTime }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 <!-- Modal -->
 <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-hidden="true">
