--- a/src/app/instance/instance.component.html
+++ b/src/app/instance/instance.component.html
@@ -21,13 +21,13 @@
         </thead>
         <tbody *ngFor="let instance of ec2_data">
             <tr class="clickable-row" (click)="activateRow('EC2Table', instance.InstanceId)">
-                <th scope="row" id="instanceId">{{ instance.identifier }}</th>
-                <td>{{ instance.context }}</td>
-                <td>{{ instance.type }}</td>
-                <td>{{ instance.availabilityZone }}</td>
-                <td>{{ instance.status }}</td>
-                <td>{{ instance.dns }}</td>
-                <td>{{ instance.createdOn }}</td>
+                <th scope="row" id="instanceId">{{ instance.InstanceId }}</th>
+                <td>{{ instance.Tags[0]?.Value }}</td>
+                <td>{{ instance.InstanceType }}</td>
+                <td>{{ instance.Placement.AvailabilityZone }}</td>
+                <td>{{ instance.State.Name }}</td>
+                <td>{{ instance.PublicDnsName }}</td>
+                <td>{{ instance.LaunchTime }}</td>
             </tr>
         </tbody>
     </table>
@@ -100,6 +100,10 @@
             </tbody>
         </table>
     </div>
+
+<ng-container *ngFor="let context of context.names">
+    <app-cluster [title]="context"></app-cluster>
+</ng-container>
 
 <!-- Modal -->
 <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-hidden="true">
