--- a/src/app/instance/instance.component.html
+++ b/src/app/instance/instance.component.html
@@ -1,11 +1,10 @@
 <div class="instance-section">
     <h5>EC2 INSTANCES</h5>
     <div class="button-bar">
-        <button type="button" class="btn btn-outline-success" id="create-EC2" data-toggle="modal" data-target="#createModal"><i class="fas fa-plus fa-lg"></i></button>
+        <button type="button" class="btn btn-outline-success" id="create-EC2" data-toggle="modal" data-target="#createEC2"><i class="fas fa-plus fa-lg"></i></button>
         <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminate('ec2')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
-        <button type="button" class="btn btn-outline-danger" id="terminate-jenkins-EC2"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-jenkins fa-lg"></i></button>
         <button type="button" class="btn btn-outline-primary" id="analyze-EC2" (click)="analyze('ec2')"><i class="far fa-chart-bar fa-lg"></i></button>
-        <button type="button" class="btn btn-outline-primary" id="cost-EC2"><i class="fas fa-dollar-sign fa-lg"></i></button>
+        <!--<button type="button" class="btn btn-outline-primary" id="cost-EC2"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
     </div>
     <table id="EC2Table" class="table">
         <thead>
@@ -31,6 +30,7 @@
             </tr>
         </tbody>
     </table>
+    <span *ngIf="!ec2_data[0]">There are no EC2 instances running.</span>
 </div>
 
 <div class="instance-section">
@@ -38,9 +38,8 @@
     <div class="button-bar">
         <button type="button" class="btn btn-outline-success" id="create-RDS" (click)="create('rds')"><i class="fas fa-plus fa-lg"></i></button>
         <button type="button" class="btn btn-outline-danger" id="terminate-AWS-RDS" (click)="terminate('rds')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
-        <button type="button" class="btn btn-outline-danger" id="terminate-jenkins-RDS"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-jenkins fa-lg"></i></button>
         <button type="button" class="btn btn-outline-primary" id="analyze-RDS" (click)="analyze('rds')"><i class="far fa-chart-bar fa-lg"></i></button>
-        <button type="button" class="btn btn-outline-primary" id="cost-RDS"><i class="fas fa-dollar-sign fa-lg"></i></button>
+        <!--<button type="button" class="btn btn-outline-primary" id="cost-RDS"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
     </div>
     <table id="RDSTable" class="table">
         <thead>
@@ -68,6 +67,7 @@
             </tr>
         </tbody>
     </table>
+    <span *ngIf="!rds_data[0]">There are no RDS instances running.</span>
 </div>
 
 <div class="instance-section">
@@ -75,9 +75,8 @@
         <div class="button-bar">
             <button type="button" class="btn btn-outline-success" id="create-EFS" (click)="create('efs')"><i class="fas fa-plus fa-lg"></i></button>
             <button type="button" class="btn btn-outline-danger" id="terminate-AWS-EFS" (click)="terminate('efs')"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
-            <button type="button" class="btn btn-outline-danger" id="terminate-jenkins-EFS"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-jenkins fa-lg"></i></button>
             <button type="button" class="btn btn-outline-primary" id="analyze-EFS" (click)="analyze('efs')"><i class="far fa-chart-bar fa-lg"></i></button>
-            <button type="button" class="btn btn-outline-primary" id="cost-EFS"><i class="fas fa-dollar-sign fa-lg"></i></button>
+            <!--<button type="button" class="btn btn-outline-primary" id="cost-EFS"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
         </div>
         <table id="EFSTable" class="table">
             <thead>
@@ -99,6 +98,7 @@
                 </tr>
             </tbody>
         </table>
+        <span *ngIf="!efs_data[0]">There are no EFS instances running.</span>
     </div>
 
 <ng-container *ngFor="let context of context.names">
@@ -106,11 +106,11 @@
 </ng-container>
 
 <!-- Modal -->
-<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="createEC2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Launch Instance</h5>
+                <h5 class="modal-title">Launch EC2 Instance</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
