--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,9 @@ body {
   a.nav-link {
     color: #ffac59;
   }
+
+  .instance-section {
+    background: #fff;
+    padding: 2em;
+    margin-bottom: 1rem;
+}
