--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,3 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">Fischer Janitor</a>
-  </div>
+  <a class="navbar-brand" routerLink="/instances">CleanCloud <i class="fas fa-cloud fa-lg"></i></a>
 </nav>
