--- a/src/app/rds/rds.component.html
+++ b/src/app/rds/rds.component.html
@@ -1,8 +1,8 @@
-<div class="instance-section">
+<section>
   <h5>RDS DB INSTANCES</h5>
   <div class="button-bar">
     <button type="button" class="btn btn-outline-success" id="create-RDS" (click)="createInstance()"><i class="fas fa-plus fa-lg"></i></button>
-    <button type="button" class="btn btn-outline-danger" id="terminate-AWS-RDS" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
+    <button type="button" class="btn btn-outline-danger" id="terminate-AWS-RDS" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i></button>
     <!--<button type="button" class="btn btn-outline-primary" id="analyze-RDS" (click)="analyze('rds')"><i class="far fa-chart-bar fa-lg"></i></button>-->
     <!--<button type="button" class="btn btn-outline-primary" id="cost-RDS"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
   </div>
@@ -39,7 +39,7 @@
     </tbody>
   </table>
   <span *ngIf="!rdsInstances[0]">There are no RDS instances running.</span>
-</div>
+</section>
 
 <!-- Modal
 <div class="modal fade" id="createRDS" tabindex="-1" role="dialog" aria-hidden="true">
