--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <nav class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/">Instances</a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/instances"><i class="fab fa-aws fa-lg"></i> Instances</a>
   </li>
   <li *ngIf="!authenticationService.isLoggedIn()" class="nav-item">
-    <a class="nav-link" routerLink="/login">Login</a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/login"><i class="fas fa-sign-in-alt fa-lg"></i>  Login</a>
   </li>
   <li *ngIf="authenticationService.isLoggedIn()" class="nav-item">
-    <a class="nav-link" routerLink="/profile">{{ authenticationService.getUser().user }}</a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/profile"><i class="fas fa-user-circle fa-lg"></i>  {{ authenticationService.getUser().user }}</a>
   </li>
   <li *ngIf="authenticationService.isLoggedIn()" class="nav-item">
-      <a class="nav-link" routerLink="/configure">Configure Janitor</a>
+      <a class="nav-link" routerLinkActive="active-link" routerLink="/janitor"><i class="fas fa-wrench fa-lg"></i>   Janitor</a>
   </li>
   <li *ngIf="authenticationService.isLoggedIn()" class="nav-item">
-    <a class="nav-link" (click)="authenticationService.logout()">Logout <i class="fas fa-sign-out-alt fa-lg"></i></a>
+    <a class="nav-link" routerLinkActive="active-link" (click)="authenticationService.logout()"><i class="fas fa-sign-out-alt fa-lg"></i>  Logout</a>
   </li>
 </nav>
