--- a/src/app/ec2/ec2.component.html
+++ b/src/app/ec2/ec2.component.html
@@ -1,10 +1,10 @@
-<div class="instance-section">
+<section>
   <h5>EC2 INSTANCES</h5>
   <div class="button-bar">
     <button type="button" class="btn btn-outline-success" id="create-EC2" (click)="createInstance()"><i class="fas fa-plus fa-lg"></i></button>
-    <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i><i style="margin-left:10px" class="fab fa-aws fa-lg"></i></button>
+    <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i></button>
     <!--<button type="button" class="btn btn-outline-primary" id="analyze-EC2" (click)="analyze('ec2')"><i class="far fa-chart-bar fa-lg"></i></button>-->
-    <!--<button type="button" class="btn btn-outline-primary" id="cost-EC2"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
+    <!--<button type="button" class="btn btn-outline-primary" id="cost-EC2" (click)="getCost()"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
   </div>
   <table id="EC2Table" class="table">
     <thead>
@@ -17,10 +17,10 @@
         <th scope="col">Public DNS (IPv4)</th>
         <th scope="col">Zone</th>        
         <th scope="col">Status</th>        
-        <th scope="col">Creation Date</th>
+        <th scope="col">Launch time</th>
       </tr>
     </thead>
-    <tbody *ngFor="let instance of ec2Instances; let i = index">
+    <tbody *ngFor="let instance of ec2Instances">
       <tr>
         <td>
             <div class="form-check">
@@ -34,12 +34,12 @@
         <td>{{ instance.dns }}</td>
         <td>{{ instance.zone }}</td>
         <td>{{ instance.status }}</td>
-        <td>{{ instance.creationDate }}</td>
+        <td>{{ instance.creationDate | amDateFormat: 'M/D/YYYY h:mm A' }}</td>
       </tr>
     </tbody>
   </table>
   <span *ngIf="!ec2Instances[0]">There are no EC2 instances running.</span>
-</div>
+</section>
 
 <!-- Modal
 <div class="modal fade" id="createEC2" tabindex="-1" role="dialog" aria-hidden="true">
