--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<section>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
+      <h1>Login</h1>
       <form (submit)="login()">
         <div class="form-group">
           <input type="text" class="form-control" name="username" placeholder="Username" [(ngModel)]="credentials.username">
@@ -8,8 +9,8 @@
         <div class="form-group">
           <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
         </div>
-        <button type="submit" class="btn btn-default">Login</button>
+        <button type="submit" class="cldn-btn">Login</button>
       </form>
     </div>
   </div>
-</div>
+</section>
