--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,18 +1,47 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-horizontal">
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Username</label>
-          <p class="form-control-static">{{ userProfile?.username }}</p>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">Profile</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="false">Register New User</a>
+  </li>
+</ul>
+<section>
+  <div class="tab-content" id="tabContent">
+    <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <div class="form-group row">
+        <label class="col-2 col-form-label">Username</label>
+        <div class="col-4">
+          <input class="form-control" type="text" value="{{ userProfile?.username }}">
         </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">Email</label>
-          <p class="form-control-static">{{ userProfile?.email }}</p>
+      </div>
+      <div class="form-group row">
+          <label class="col-2 col-form-label">Email</label>
+          <div class="col-4">
+            <input class="form-control" type="text" value="{{ userProfile?.email }}">
+          </div>
+        </div>
+      <div class="form-group row">
+          <label class="col-2 col-form-label">First Name</label>
+          <div class="col-4">
+            <input class="form-control" type="text" value="{{ userProfile?.firstName }}">
+          </div>
+      </div>
+      <div class="form-group row">
+          <label class="col-2 col-form-label">Last Name</label>
+          <div class="col-4">
+            <input class="form-control" type="text" value="{{ userProfile?.lastName }}">
+          </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-2 col-form-label"></label>
+        <div class="col-4">
+          <button style="width:100%" type="submit" class="cldn-btn">Submit</button>
         </div>
       </div>
     </div>
+    <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
+      <app-register></app-register>
+    </div>
   </div>
-</div>
-
-<a routerLink="/register">Register New User</a>
+</section>
