--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="row">
+  <div class="row register">
     <div class="col-md-6">
       <form (submit)="register()">
         <div class="form-group">
@@ -22,8 +21,7 @@
           <input type="password" class="form-control" name="password"
             placeholder="Password" [(ngModel)]="credentials.password">
         </div>
-        <button type="submit" class="btn btn-default">Register</button>
+        <button type="submit" class="cldn-btn">Register</button>
       </form>
     </div>
   </div>
-</div>
