Implement monitor, ec2 & rds cost, and ec2 analytics

--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -1,1 +1,3 @@
-<div id="graph"></div>
+<h2 class="float-left">{{ data.name }} CPU Utilization</h2>
+<div (click)="close()"><i class="fas fa-times float-right"></i></div>
+<div class="graph" id="graph"></div>
