--- a/src/app/cluster/cluster.component.css
+++ b/src/app/cluster/cluster.component.css
@@ -1,6 +1,10 @@
 .instance-section {
-    background: #fff;
-    padding: 2em;
-    margin-bottom: 1rem;
-    border: 1px solid #c6c6c6;
+  background: #fff;
+  padding: 2em;
+  margin-bottom: 1rem;
+  border: 1px solid #c6c6c6;
+}
+
+.button-bar {
+  clear: both;
 }
