--- a/src/app/ec2/ec2.component.html
+++ b/src/app/ec2/ec2.component.html
@@ -1,40 +1,46 @@
 <section>
-  <h5>EC2 INSTANCES</h5>
+  <h2>EC2 INSTANCES</h2>
   <div class="button-bar">
-    <button type="button" class="btn btn-outline-success" id="create-EC2" (click)="createInstance()"><i class="fas fa-plus fa-lg"></i></button>
-    <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i></button>
-    <!--<button type="button" class="btn btn-outline-primary" id="analyze-EC2" (click)="analyze('ec2')"><i class="far fa-chart-bar fa-lg"></i></button>-->
-    <!--<button type="button" class="btn btn-outline-primary" id="cost-EC2" (click)="getCost()"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
+    <button type="button" class="btn btn-outline-success" id="create-EC2" (click)="createInstance()">
+      <i class="fas fa-plus fa-lg"></i>
+    </button>
+    <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()">
+      <i class="fas fa-trash-alt fa-lg"></i>
+    </button>
   </div>
   <table id="EC2Table" class="table">
     <thead>
       <tr>
-        <th scope="col"></th>            
+        <th scope="col"></th>
         <th scope="col">ID</th>
         <th scope="col">Context</th>
-        <th scope="col">Name</th>        
+        <th scope="col">Name</th>
         <th scope="col">Type</th>
-        <th scope="col">Public DNS (IPv4)</th>
-        <th scope="col">Zone</th>        
-        <th scope="col">Status</th>        
-        <th scope="col">Launch time</th>
+        <th scope="col">Zone</th>
+        <th scope="col">Status</th>
+        <th scope="col">Hours</th>
+        <th scope="col">Cost</th>
+        <th scope="col">Launch Time</th>
+        <th scope="col">Analyze</th>
       </tr>
     </thead>
     <tbody *ngFor="let instance of ec2Instances">
       <tr>
         <td>
-            <div class="form-check">
-                <input type="checkbox" [(ngModel)]="instance.checked">
-            </div>
+          <div class="form-check">
+            <input type="checkbox" [(ngModel)]="instance.checked">
+          </div>
         </td>
-        <th scope="row" id="instanceId">{{ instance.id }}</th>
+        <th>{{ instance.id }}</th>
         <td>{{ instance.context }}</td>
-        <td>{{ instance.name }}</td>        
+        <td>{{ instance.name }}</td>
         <td>{{ instance.type }}</td>
-        <td>{{ instance.dns }}</td>
         <td>{{ instance.zone }}</td>
         <td>{{ instance.status }}</td>
-        <td>{{ instance.creationDate | amDateFormat: 'M/D/YYYY h:mm A' }}</td>
+        <td>{{ instance.runningHours | number : '1.2' }}</td>
+        <td>${{ instance.cost | number : '1.2-2' }}</td>
+        <td>{{ instance.creationDate | amDateFormat: 'M/D h:mm A' }}</td>
+        <td><div class="analyze" (click)="openAnalytics(instance.id, instance.name)"><i class="far fa-chart-bar fa-lg"></i></div></td>
       </tr>
     </tbody>
   </table>
