--- a/src/app/janitor/janitor.component.html
+++ b/src/app/janitor/janitor.component.html
@@ -1,7 +1,7 @@
 <section>
-  <h5>JANITORS</h5>
+  <h2>JANITORS</h2>
   <div class="button-bar">
-    <button type="button" class="btn btn-outline-success" id="create-Janitor" data-toggle="modal" data-target="#createJanitor"><i class="fas fa-plus fa-lg"></i></button>
+    <button type="button" class="btn btn-outline-success" id="create-Janitor" (click)="createJanitor()"><i class="fas fa-plus fa-lg"></i></button>
     <button type="button" class="btn btn-outline-danger" id="terminate-Janitor" (click)="destroyJanitor()"><i class="fas fa-trash-alt fa-lg"></i></button>
     <!--<button type="button" class="btn btn-outline-primary" id="analyze-EC2" (click)="analyze('ec2')"><i class="far fa-chart-bar fa-lg"></i></button>-->
     <!--<button type="button" class="btn btn-outline-primary" id="cost-EC2"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
@@ -38,56 +38,3 @@
   </table>
   <!--<span *ngIf="!janitors[0]">There are no Janitors running.</span>-->
 </section>
-
-<div class="modal fade" id="createJanitor" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Configure Janitor</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-              <div class="container">
-                <form (submit)="runJanitor()">
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="region">Region</label>
-                    <select class="col-sm-9 form-control" name="region" [(ngModel)]="janitorConfig.region">
-                      <option *ngFor="let region of regions" [ngValue]="region.name">{{ region.location }}</option>
-                    </select>
-                  </div>
-                  <div class="form-group row">
-                      <label class="col-sm-3 col-form-label" for="port">Port</label>
-                      <input type="text" class="col-sm-9 form-control" name="port"
-                        placeholder="Port Number" [(ngModel)]="janitorConfig.port">
-                    </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="defaultEmail">Default Email</label>
-                    <input type="email" class="col-sm-9 form-control" name="defaultEmail"
-                      placeholder="Default Email Address" [(ngModel)]="janitorConfig.defaultEmail">
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="summaryEmail">Summary Email</label>
-                    <input type="text" class="col-sm-9 form-control" name="summaryEmail"
-                      placeholder="Summary Email Address" [(ngModel)]="janitorConfig.summaryEmail">
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label" for="sourceEmail">Source Email</label>
-                    <input type="text" class="col-sm-9 form-control" name="sourceEmail"
-                      placeholder="Source Email Address" [(ngModel)]="janitorConfig.sourceEmail">
-                  </div>
-                  <div class="form-group form-check row">
-                    <input class="col-sm-3 form-check-input" type="checkbox" name="isMonkeyTime" id="isMonkeyTime" 
-                      [checked]="janitorConfig.isMonkeyTime" [(ngModel)]="janitorConfig.isMonkeyTime">
-                    <label class="col-sm-9 form-check-label" for="isMonkeyTime">
-                      Is Monkey Time?
-                    </label>
-                  </div>
-                  <button type="submit" class="cldn-btn">Run Janitor</button>
-                </form>
-              </div>
-            </div>
-        </div>
-    </div>
-</div>
