--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,21 +1,55 @@
-nav {
-    background: #fff;
-    border: 1px solid #c6c6c6;
-}
-
 a.nav-link {
-    color: #000;
-    cursor: pointer;
+  color: #000;
+  cursor: pointer;
 }
 
 .nav-item {
-    transition: color .10s ease-in-out, background-color .15s;
+  transition: color .10s ease-in-out, background-color .15s;
 }
-.nav-item:hover, a.nav-link.active-link {
-    background-color: #ffac59;
-    color: #fff;
+
+.nav-item:hover {
+  background-color: #f49535;
+}
+
+a.nav-link.active-link {
+  background-color: #ffac59;
+  color: #fff;
 }
 
 a.nav-link:hover {
-    color: #fff;
+  color: #fff;
+}
+
+.sidebar {
+  margin-left: 1em;
+}
+
+.nav-item {
+  text-align: right;
+  font-size: 20px;
+  border-bottom: 1px solid #c6c6c6;
+}
+
+.sidenav {
+  height: 100vh;
+  width: 200px;
+  display: block;
+  border-right: 1px solid #c6c6c6;
+}
+
+.sidenav-container {
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.container {
+    padding: 75px 0 0 0;
+}
+
+.sidenav-content {
+  display: flex;
+  align-items: left;
+  justify-content: left;
 }
